--- a/templates/seminario.html
+++ b/templates/seminario.html
@@ -8,75 +8,61 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../Estilo/seminario.css">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+    <script>
+    const url = 'https://github.com/CrewHHx/JSONS/blob/1901712d89e19645d36ab3a8e66f0cdaf53d2b8a/Cards.json'
+    const imagenElement = document.getElementById('img');
+    const
+    </script>
 </head>
+<header class="header">
+    <div class="menu__wrapper">
+        <div class="menu__bar">
+            <a href="#" title="Home" aria-label="home" class="logo">
+                <img src="/Imagenes/logokchimbo64.ico" alt="logo">
+            </a>
+            <nav>
+                <ul class="navigation hide">
+                    <li>
+                        <a href="../templates/inicio.html" title="Inicio">
+                            Inicio
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/templates/calendario.html" title="Calendario">
+                            Calendario
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/templates/facultades.html" title="Facultades">
+                            Facultades
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/templates/Deporte.html" title="Deportes">
+                            Deportes
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/templates/seminario.html" title="Seminarios">
+                            Seminarios
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/templates/eventos.html" title="Eventos">
+                            Eventos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/templates/Conferencias.html" title="Conferencia">
+                            Conferencia
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 <body>
     <h1>SEMINARIOS</h1><br>
-    <!-- Botones de acceso y registro en la esquina superior derecha -->
-    <div>
-        <div class="contenedor">
-    <div class="botones-acceso">
-        <ul>
-            <li><a href="../templates/login.html">Acceder</a></li>
-            <li><a href="../templates/registro.html">Crear Cuenta</a></li>
-        </ul>
-    </div>
-    </div>
-    <aside class="sidebar">
-        <div class="logo">
-            <img src="../Imagenes/logokchimbo64.ico" alt="logo">
-            <h2>El Rincón del Kchimbo</h2>
-        </div>
-        <ul class="links">
-            <h4>Menu Principal</h4>
-            <li>
-                <i class="fas fa-home"></i> <!-- Se corrigió la clase de los iconos -->
-                <a href="../templates/inicio sin btn.html">Inicio</a>
-            </li>
-            <li>
-                <i class="far fa-calendar"></i>
-                <a href="/templates/calendario.html">Calendario</a>
-            </li>
-            <h4>Universidad</h4>
-            <li>
-                <i class="fas fa-graduation-cap"></i>
-                <a href="facultades.html">Facultades</a>
-            </li>
-            <li>
-                <i class="fas fa-futbol"></i>
-                <a href="#">Deportes</a>
-            </li>
-            <li>
-                <i class="fas fa-users"></i></i>
-                <a href="./seminario.html">Seminarios</a>
-            </li>
-            <li>
-                <i class="far fa-calendar-alt"></i>
-                <a href="./eventos.html">Eventos</a>
-            </li>
-            <li>
-                <i class="fas fa-comments"></i>
-                <a href="./Conferencias.html">Conferencia</a>
-            </li>
-            <li>
-                <i class="fas fa-tools"></i>
-                <a href="./Talleres.html">Talleres</a>
-            </li>
-            <h4>Cuenta</h4>
-            <li>
-                <i class="fas fa-user-circle"></i>
-                <a href="/templates/Perfil.html">Perfil</a>
-            </li>
-            <li>
-                <i class="fas fa-bell"></i>
-                <a href="/templates/Notificaciones.html">Notificaciones</a>
-            </li>
-            <li class="logout-link">
-                <i class="fas fa-sign-out-alt"></i>
-                <a href="/templates/inicio.html">Cerrar Sesión</a><!-- Colocar la pagina inicial que creara willy-->
-            </li>
-        </ul>
-    </aside>
-    </div>
+
     <div>
         <ul class="social-buttons">
             <li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=http://127.0.0.1:3000/templates/seminario.html"  target="_blank"><i class="fab fa-facebook"></i></a></li>
@@ -89,31 +75,42 @@
     <div class="container">
         <div class="card">
             <figure>
-                <img src="#" alt="">
+                <img src="https://secure.meetupstatic.com/photos/event/8/a/8/a/event_496715466.webp?w=256" alt="">
             </figure>
             <div class="contenido">
-                <h3>Seminario 1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo saepe aspernatur ratione, quam excepturi mollitia sequi eius sed illum dicta vitae eaque cum obcaecati, ipsa velit veniam ducimus. Eum, error?</p>
+                <h3>Bootcamp - MS Dynamics 365 Fundamentals (ERP)</h3>
+                <p>Pronto.. DAY Wednesday, May 8, 20246:00 PM to 9:00PM GMT-5</p>
                 <a href="#">Leer Más</a>
             </div>
         </div>
         <div class="card">
             <figure>
-                <img src="#" alt="">
+                <img src="https://secure.meetupstatic.com/photos/event/6/a/d/e/600_520407358.webp?w=384" alt="">
             </figure>
             <div class="contenido">
-                <h3>Seminario 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo saepe aspernatur ratione, quam excepturi mollitia sequi eius sed illum dicta vitae eaque cum obcaecati, ipsa velit veniam ducimus. Eum, error?</p>
+                <h3>Técnicas de Facilitación Visual para Potenciar la Innovación</h3>
+                <p>¡Desata tu creatividad! Webinar gratuito: Técnicas de Facilitación Visual para la Innovación
+        ¿Eres un líder que busca impulsar la innovación en tu equipo?
+        ¡Entonces este webinar es para ti!
+        ",</p>
                 <a href="#">Leer Más</a>
             </div>
         </div>
         <div class="card">
             <figure>
-                <img src="#" alt="">
+                <img src="https://secure.meetupstatic.com/photos/event/a/a/b/9/600_516283705.webp?w=384" alt="">
             </figure>
             <div class="contenido">
-                <h3>Seminario 3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo saepe aspernatur ratione, quam excepturi mollitia sequi eius sed illum dicta vitae eaque cum obcaecati, ipsa velit veniam ducimus. Eum, error?</p>
+                <h3>Silicon Valley Business Networking (Online)</h3>
+                <p>This event is organized in collaboration with many groups!
+
+Organizational Sponsor:
+
+Startup House
+
+Need a place to stay short term in Silicon Valley?
+
+Stay at Startup House in Palo Alto</p>
                 <a href="#">Leer Más</a>
             </div>
         </div>
@@ -121,31 +118,46 @@
     <div class="container">
         <div class="card">
             <figure>
-                <img src="#" alt="">
+                <img src="https://secure.meetupstatic.com/photos/event/5/2/1/f/600_520521023.webp?w=384" alt="">
             </figure>
             <div class="contenido">
-                <h3>Seminario 4</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo saepe aspernatur ratione, quam excepturi mollitia sequi eius sed illum dicta vitae eaque cum obcaecati, ipsa velit veniam ducimus. Eum, error?</p>
+                <h3>Robotica y automatización en la nube de AWS</h3>
+                <p>📢 Evento presencial:
+📢 AWS en Directo: Robotica y automatización en la nube de AWS
+
+💡IMPORTANTE Directo será vía: Sábado 11 de mayo a las 2:00 PM !!!
+🔥 GIVEAWAY: Créditos de AWS 🔥 Catering para compartir
+
+Post evento se publicará en las redes la grabación en :
+✔️Twitch: https://twitch.tv/awsugperu
+✔️Facebook Live: http://web.facebook.com/awsperu/live</p>
                 <a href="#">Leer Más</a>
             </div>
         </div>
         <div class="card">
             <figure>
-                <img src="#" alt="">
+                <img src="https://secure.meetupstatic.com/photos/event/d/3/1/9/600_520314041.webp?w=384" alt="">
             </figure>
             <div class="contenido">
-                <h3>Seminario 5</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo saepe aspernatur ratione, quam excepturi mollitia sequi eius sed illum dicta vitae eaque cum obcaecati, ipsa velit veniam ducimus. Eum, error?</p>
+                <h3>Optimizando la Gestión del Cliente en la Mesa de Servicio con IA</h3>
+                <p>¡Descubre el futuro de la gestion del soporte a tu cliente con nuestro webinar "Optimizando la Gestión del Cliente en la Mesa de Servicio con IA"! Únete a Herzum, consultora internacional de IT especializada en Agile y DevOps, el 30 de abril a las 3 pm (Bogota), para una sesión exclusiva y llena de ejemplos practicos.
+
+En esta sesión en vivo, exploraremos cómo la combinación de automatización e inteligencia artificial puede transformar por completo la forma en que las empresas gestionan su atención al cliente.</p>
                 <a href="#">Leer Más</a>
             </div>
         </div>
         <div class="card">
             <figure>
-                <img src="#" alt="">
+                <img src="https://secure.meetupstatic.com/photos/event/e/5/0/0/600_520438624.webp?w=384" alt="">
             </figure>
             <div class="contenido">
-                <h3>Seminario 6</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo saepe aspernatur ratione, quam excepturi mollitia sequi eius sed illum dicta vitae eaque cum obcaecati, ipsa velit veniam ducimus. Eum, error?</p>
+                <h3>Facilitación Visual para UX UI: Diseña con empatía</h3>
+                <p>Diseña con empatía! Webinar gratuito: Facilitación Visual para UX/UI
+¿Eres diseñador/a UX/UI que busca potenciar su creatividad y generar experiencias de usuario memorables?
+
+¡Entonces este webinar es para ti!
+
+En este webinar gratuito, te sumergirás en el fascinante mundo de la Facilitación Visual y descubrirás cómo esta poderosa herramienta puede transformar tu proceso de diseño, llevándolo a un nivel superior.</p>
                 <a href="#">Leer Más</a>
             </div>
         </div>
