--- a/Estilo/calend.css
+++ b/Estilo/calend.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-clr: #b38add;
+  --primary-clr:  #d73939;
 }
 * {
   margin: 0;
@@ -39,7 +39,7 @@ body {
   display: flex;
 
   border-radius: 10px;
-  background-color: #373c4f;
+  background-color: #EABE3F;
 }
 .left {
   width: 60%;
@@ -401,7 +401,7 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
-  color: #373c4f;
+  color: #1f2478;
   border-bottom: 1px solid #f5f5f5;
 }
 .add-event-header .close {
