--- a/templates/Conferencias.html
+++ b/templates/Conferencias.html
@@ -23,7 +23,7 @@
     </header>
     <aside class="sidebar">
         <div class="logo">
-            <img src="../Imagenes/logo.png" alt="logo">
+            <img src="../Imagenes/logokchimbo64.ico" alt="logo">
             <h2>El Ricón del cachimbo</h2>
         </div>
         <ul class="links">
@@ -123,8 +123,8 @@
                 <article>
                     <figure>
                         <img
-                            src="https://scontent.flim1-2.fna.fbcdn.net/v/t39.30808-6/299754656_1556087831511313_5398161862890836207_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=SAsicf3ARTgAb7af55i&_nc_ht=scontent.flim1-2.fna&oh=00_AfBLnrLhq2tHsaD_NLreueY9BilDbk6Y_1NTKRSScMtTmw&oe=6626224A"
-                            alt="Preview"
+                            src="../Imagenes/conferencia-3.jpg"
+                            alt="conferencia-3"
                         >
                     </figure>
                     <div class="article-preview">
@@ -161,6 +161,8 @@
                             <br>
                             <br>
                             <br>
+                            <br>
+
                             <a href="https://badbit.org/invitacion-conferencia-sobre-cine-y-literatura-en-universidad-nacional-federico-villarreal/" 
                                 class="read-more" title="Leer más">
                                     Leer más
@@ -171,16 +173,21 @@
                 <article>            
                     <figure>
                         <img
-                            src="https://img.freepik.com/free-photo/beautiful-paradise-island-with-beach-sea_74190-1023.jpg?w=1800&t=st=1687169691~exp=1687170291~hmac=7a65a4e5b2eb374e94e17fd7fb2ab0d1b7b7aaf83078cd62ed5d0a84b66d5beb"
+                            src="../Imagenes/conferencia-5.jpg"
                             alt="Preview"
                         >
                     </figure>
                     <div class="article-preview">
                         <h2>Conferencia 5</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent in mauris eu tortor porttitor accumsan. 
-                            Lorem ipsum dolor Te amo Omen (este mensaje se perdera espero) sit amet, consectetuer adipiscing elit. Praesent in mauris eu tortor porttitor accumsan. 
-                            <a href="#" class="read-more" title="Leer más">
+                            La Escuela Profesional de Educación Primaria,
+                            de la Facultad de Educación de nuestra casa de estudios superiores,
+                            organiza el primer seminario 2024 Promovemos la responsabilidad social
+                            para la formación profesional y ciudadana. 
+                            <br>
+                            <a href="https://www.facebook.com/photo?fbid=481962327518018&set=pcb.481963767517874" 
+                                class="read-more" 
+                                title="Leer más">
                                 Leer más
                             </a>
                         </p>
@@ -199,66 +206,11 @@
                             Con la participación de destacados expertos de todo el mundo,
                             el miércoles 22 y jueves 23 de setiembre se realizará la 7ª 
                             Conferencia Internacional sobre Tecnologías de Ingeniería y 
-                            Computación Ecológicas 2021 (ICGCET-2021) <br/>
+                            Computación Ecológicas 2021 (ICGCET-2021) 
+                            <br/>
+                            <br/>
                             <a href="https://elmen.pe/universidad-villarreal-realizara-conferencia-internacional-sobre-tecnologia/" 
                             class="read-more" target="_blank" title="Leer más">
-                                Leer más
-                            </a>
-                        </p>
-                    </div>
-                </article>
-                <article>
-                    <figure>
-                        <img
-                            src="https://img.freepik.com/free-photo/view-mountains-landscape-huesca_1398-5217.jpg?w=2000&t=st=1687169991~exp=1687170591~hmac=aa445998f8b6570cab3abc9d68853ab80ba944475fcbc05c70c6061f967ab9f7"
-                            alt="Preview"
-                        >
-                    </figure>
-                    <div class="article-preview">
-                        <h2>Conferencia7</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent in mauris eu tortor porttitor accumsan. 
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent in mauris eu tortor porttitor accumsan. 
-
-                            <a href="#" class="read-more" title="Leer más">
-                                Leer más
-                            </a>
-                        </p>
-                    </div>
-                </article>
-                <article>            
-                    <figure>
-                        <img
-                            src="https://img.freepik.com/free-photo/beautiful-shot-snowy-hill-surrounded-by-mountains-with-light-pink-sky_181624-4102.jpg?w=2000&t=st=1687169963~exp=1687170563~hmac=b811dc16315ec7776b847588539208c1d57e43df80f7319aeb9b55ed7322784b"
-                            alt="Preview"
-                        >
-                    </figure>
-                    <div class="article-preview">
-                        <h2>Conferencia 8</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent in mauris eu tortor porttitor accumsan. 
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent in mauris eu tortor porttitor accumsan. 
-
-                            <a href="#" class="read-more" title="Leer más">
-                                Leer más
-                            </a>
-                        </p>
-                    </div>
-                </article>
-                <article>
-                    <figure>
-                        <img
-                            src="https://img.freepik.com/free-photo/beautiful_1203-2633.jpg?w=2000&t=st=1687169925~exp=1687170525~hmac=4e1fdddf8ca048eaa100d431639d165f115cd16cea95feff591fbecdc3b28d4c"
-                            alt="Preview"
-                        >
-                    </figure>
-                    <div class="article-preview">
-                        <h2>Conferencia 9</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent in mauris eu tortor porttitor accumsan. 
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent in mauris eu tortor porttitor accumsan. 
-
-                            <a href="#" class="read-more" title="Leer más">
                                 Leer más
                             </a>
                         </p>
