--- a/templates/Talleres.html
+++ b/templates/Talleres.html
@@ -68,27 +68,41 @@
 
     <main>
         <div class="card">
-            <img src="../Imagenes/willy-dylan.jpeg" alt="img1">
+            <img src="../Imagenes/taller-arte1.jpg" alt="img1">
                 <div class="info">
-                    <h1>ZzZ</h1>
-                    <p>Momento de ir a dormir</p>
-                    <a href="https://www.youtube.com/watch?v=E2t9jUyra7s" target="_blank" class="btn">Saber Más</a>
+                    <h1>CLAUSURA DE TALLERES</h1>
+                    <p>
+                        Ciclo Regular III 2023
+                        Viernes 15 y Sábado 16
+                        INGRESO LIBRE, LOS ESPERAMOS!!!</p>
+                    <a href="https://www.facebook.com/photo/?fbid=742411517925684&set=a.633705278796309&locale=es_LA"
+                     target="_blank" class="btn">Saber Más</a>
                 </div>
         </div>
         <div class="card">
-            <img src="../Imagenes/Willy.png" alt="img2">
+            <img src="../Imagenes/musica-taller1.jpg" alt="img2">
                 <div class="info">
-                    <h1>Willy pirata</h1>
-                    <p>wtf? willy pirata?</p>
-                    <a href="https://www.youtube.com/watch?v=PPyCavz8nMY" target="_blank" class="btn">Saber Mas</a>
+                    <h1>Talleres de Música</h1>
+                    <p>𝗖𝗜𝗖𝗟𝗢 𝗥𝗘𝗚𝗨𝗟𝗔𝗥 𝗜 𝟮𝟬𝟮𝟰 (Mayo - Junio)
+                        Duración: 08 semanas
+                        Dirigido a jóvenes y adultos.
+                        
+                        ⚠️𝗜𝗡𝗦𝗖𝗥𝗜𝗣𝗖𝗜𝗢𝗡𝗘𝗦 𝗔𝗕𝗜𝗘𝗥𝗧𝗔𝗦 (inscripción virtual)
+                        Hasta el viernes 10 de mayo.</p>
+                    <a href="https://www.facebook.com/photo?fbid=834900915343410&set=pcb.831239832376185"
+                     target="_blank" 
+                     class="btn">Saber Mas</a>
                 </div>
         </div>
         <div class="card">
-            <img src="../Imagenes/mono morado.png" alt="img3">
+            <img src="../Imagenes/taller-r.jpg" alt="img3">
                 <div class="info">
-                    <h1>Mono morado</h1>
-                    <p>Este mono en los 2000 fue potente...</p>
-                    <a href="https://www.youtube.com/watch?v=abp6sZ2T6tA" target="_blank" class="btn">Saber Más</a>
+                    <h1>Curso de R</h1>
+                    <p>¿Quieres potenciar tus habilidades en ciencia abierta y estadística utilizando R?
+                        ¡Entonces este curso es perfecto para ti! 📊💻</p>
+                    <a href="https://www.facebook.com/photo/?fbid=931923695601863&set=a.475460614581509"
+                     target="_blank" 
+                     class="btn">Saber Más</a>
                 </div>
         </div>
     </main>
