--- a/Estilo/calend.css
+++ b/Estilo/calend.css
@@ -39,7 +39,7 @@ body {
   display: flex;
 
   border-radius: 10px;
-  background-color: #78611f;
+  background-color: #8b1919;
 }
 .left {
   width: 60%;
