--- a/templates/calendario.html
+++ b/templates/calendario.html
@@ -98,19 +98,19 @@
                 </div>
                 <div class="add-event-body">
                     <div class="add-event-input">
-                        <input type="text" placeholder="Event Name" class="event-name" />
+                        <input type="text" placeholder="Nombre del evento" class="event-name" />
                     </div>
                     <div class="add-event-input">
                         <input
                             type="text"
-                            placeholder="Event Time From"
+                            placeholder="Desde cuando..."
                             class="event-time-from"
                         />
                     </div>
                     <div class="add-event-input">
                         <input
                             type="text"
-                            placeholder="Event Time To"
+                            placeholder="Hasta cuando..."
                             class="event-time-to"
                         />
                     </div>
