--- a/templates/seminario.html
+++ b/templates/seminario.html
@@ -131,11 +131,7 @@
                     📢 AWS en Directo: Robotica y automatización en la nube de AWS
 
                     💡IMPORTANTE Directo será vía: Sábado 11 de mayo a las 2:00 PM !!!
-                    🔥 GIVEAWAY: Créditos de AWS 🔥 Catering para compartir
-
-                    Post evento se publicará en las redes la grabación en :
-                    ✔️Twitch: https://twitch.tv/awsugperu
-                    ✔️Facebook Live: http://web.facebook.com/awsperu/live</p>
+                    🔥 GIVEAWAY: Créditos de AWS 🔥 Catering para compartir</p>
                 <a href="https://www.meetup.com/awsperu/events/300364542/?recId=245b9cfc-4d49-4e53-ab1f-8f2f654ce611&recSource=keyword_search&searchId=1cc057f9-1634-4064-ad11-e2967790af40">Leer Más</a>
             </div>
         </div>
