--- a/templates/eventos.html
+++ b/templates/eventos.html
@@ -123,8 +123,9 @@
             </div>
             <div class="box">
                 <h2>SOBRE NOSOTROS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+                <p> nos esforzamos por ser la guía definitiva para estudiantes universitarios.</p> 
+                <p>Nuestro compromiso radica en proporcionar información precisa, recursos útiles y consejos prácticos para ayudarte a alcanzar tus metas académicas y profesionales.</p>
+                <p>¡Bienvenido a nuestra comunidad educativa!</p>
             </div>
             <div class="box">
                 <h2>SIGUENOS</h2>
