--- a/templates/inicio sin btn.html
+++ b/templates/inicio sin btn.html
@@ -119,7 +119,7 @@
                     new YT.Player('player', {
                         height: '315',
                         width: '560',
-                        videoId: 'ECwBY-1WdZg', // Reemplaza 'VIDEO_ID' con el ID de tu video
+                        videoId: 'OtuHEl1Gmkk', // Reemplaza 'VIDEO_ID' con el ID de tu video
                         playerVars: {
                             'autoplay': 1,
                             'controls': 1,
